Fix JavaScript SyntaxError in script.min.js - Corrected rootMargin spacing in IntersectionObserver

--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title data-translate="chi-siamo-meta-title">Chi Siamo - FB Total Security | Milano</title>
+    <title data-translate="chi-siamo-meta-title">Chi Siamo - FB Total Security | Italia</title>
     <meta name="description" content="Scopri FB Total Security: agenzia autorizzata e certificata nella sicurezza professionale. Specialisti in nebbiogeni, serramenti blindati, videosorveglianza e allarmi con partnership dirette dai leader del settore." data-translate="chi-siamo-meta-description">
-    <meta name="keywords" content="FB Total Security, chi siamo, agenzia autorizzata, certificazioni sicurezza, partnership settore, Milano, sistemi sicurezza">
+    <meta name="keywords" content="FB Total Security, chi siamo, agenzia autorizzata, certificazioni sicurezza, partnership settore, Italia, sistemi sicurezza">
     <meta name="author" content="FB Total Security">
     <meta name="robots" content="index, follow">
     <meta name="language" content="IT">
@@ -14,7 +14,7 @@
     
     <!-- Open Graph -->
     <meta property="og:title" content="Chi Siamo - FB Total Security | Creatori di Sicurezza" data-translate="chi-siamo-og-title">
-    <meta property="og:description" content="Scopri FB Total Security, agenzia autorizzata e certificata nella sicurezza professionale a Milano e provincia e Monza e Brianza e provincia con partnership dirette dai leader del settore." data-translate="chi-siamo-og-description">
+    <meta property="og:description" content="Scopri FB Total Security, agenzia autorizzata e certificata nella sicurezza professionale in tutta Italia con partnership dirette dai leader del settore." data-translate="chi-siamo-og-description">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.fbtotalsecurity.com/chi-siamo.html">
     <meta property="og:image" content="https://www.fbtotalsecurity.com/icons/logo_sito_franco.webp">
@@ -27,7 +27,7 @@
     <meta name="twitter:site" content="@fbtotalsecurity">
     <meta name="twitter:creator" content="@fbtotalsecurity">
     <meta name="twitter:title" content="Chi Siamo - FB Total Security | Creatori di Sicurezza" data-translate="chi-siamo-twitter-title">
-    <meta name="twitter:description" content="Scopri FB Total Security, agenzia autorizzata e certificata nella sicurezza professionale a Milano e provincia e Monza e Brianza e provincia con partnership dirette dai leader del settore." data-translate="chi-siamo-twitter-description">
+    <meta name="twitter:description" content="Scopri FB Total Security, agenzia autorizzata e certificata nella sicurezza professionale in tutta Italia con partnership dirette dai leader del settore." data-translate="chi-siamo-twitter-description">
     <meta name="twitter:image" content="https://www.fbtotalsecurity.com/icons/logo_sito_franco.webp">
     
     <!-- Canonical URL -->
@@ -131,7 +131,7 @@
         "mainEntity": {
             "@type": "Organization",
             "name": "FB Total Security",
-            "areaServed": "Milano e provincia e Monza e Brianza e provincia",
+            "areaServed": "Italia",
             "description": "Agenzia autorizzata e certificata specializzata in sistemi di protezione avanzati con partnership dirette dai leader del settore sicurezza"
         }
     }
@@ -233,7 +233,7 @@
                 <div class="service-text">
                     <h2 data-translate="chi-siamo-storia-title">La Nostra Storia</h2>
                     <p class="service-description" data-translate="chi-siamo-storia-desc1">
-                        FB Total Security è un'agenzia autorizzata e certificata che si è affermata come punto di riferimento a Milano e provincia e Monza e Brianza e provincia per la progettazione, installazione e manutenzione di sistemi di sicurezza avanzati. Operiamo con mandati diretti e partnership esclusive con i principali leader del settore sicurezza.
+                        FB Total Security è un'agenzia autorizzata e certificata che si è affermata come punto di riferimento in tutta Italia per la progettazione, installazione e manutenzione di sistemi di sicurezza avanzati per privati e aziende. Operiamo con mandati diretti e partnership esclusive con i principali leader del settore sicurezza.
                     </p>
                     <p class="service-description" data-translate="chi-siamo-storia-desc2">
                         La nostra forza risiede nelle certificazioni professionali, nelle autorizzazioni ufficiali e nei rapporti diretti con i migliori brand internazionali. Offriamo soluzioni integrate multisettoriali con una sola agenzia. Questo ci permette di offrire soluzioni all'avanguardia e garantire la massima qualità in ogni intervento, costruendo la nostra reputazione sulla competenza tecnica certificata del nostro team.
