--- a/nebbiogeni.html
+++ b/nebbiogeni.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title data-translate="nebbiogeni-page-title">Sistemi Nebbiogeni Professionali - Protezione Antifurto Istantanea | FB Total Security Milano</title>
-    <meta name="description" content="Scopri i sistemi nebbiogeni UR Fog: tecnologia avanzata di nebulizzazione antifurto che riduce la visibilità a zero in 10 secondi. Protezione certificata per negozi, uffici e abitazioni a Milano. Consulenza gratuita." data-translate="nebbiogeni-page-description">
-    <meta name="keywords" content="nebbiogeni, sistemi nebulizzazione, antifurto nebbia, protezione nebbiogeni, sicurezza nebbia, Milano">
+    <title data-translate="nebbiogeni-page-title">Sistemi Nebbiogeni Professionali - Protezione Antifurto Istantanea | FB Total Security Italia</title>
+    <meta name="description" content="Scopri i sistemi nebbiogeni UR Fog: tecnologia avanzata di nebulizzazione antifurto che riduce la visibilità a zero in 10 secondi. Protezione certificata per negozi, uffici e abitazioni in tutta Italia per privati e aziende. Consulenza gratuita." data-translate="nebbiogeni-page-description">
+    <meta name="keywords" content="nebbiogeni, sistemi nebulizzazione, antifurto nebbia, protezione nebbiogeni, sicurezza nebbia, Italia">
     <meta name="author" content="FB Total Security">
     <meta name="robots" content="index, follow">
     <meta name="language" content="IT">
     <meta name="geo.region" content="IT-25">
-    <meta name="geo.placename" content="Milano">
+    <meta name="geo.placename" content="Italia">
     
     <!-- Open Graph -->
     <meta property="og:title" content="Sistemi Nebbiogeni UR Fog - Protezione Antifurto Avanzata" data-translate="nebbiogeni-og-title">
-    <meta property="og:description" content="Tecnologia nebbiogeni che riduce la visibilità a zero in 10 secondi. Protezione certificata per la tua attività." data-translate="nebbiogeni-og-description">
+    <meta property="og:description" content="Tecnologia nebbiogeni che riduce la visibilità a zero in 10 secondi. Protezione certificata per privati e aziende in tutta Italia." data-translate="nebbiogeni-og-description">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.fbtotalsecurity.com/nebbiogeni.html">
     <meta property="og:image" content="https://www.fbtotalsecurity.com/icons/copertina-youtube-URfog.webp">
@@ -27,7 +27,7 @@
     <meta name="twitter:site" content="@fbtotalsecurity">
     <meta name="twitter:creator" content="@fbtotalsecurity">
     <meta name="twitter:title" content="Sistemi Nebbiogeni UR Fog - Protezione Antifurto Avanzata" data-translate="nebbiogeni-twitter-title">
-    <meta name="twitter:description" content="Tecnologia nebbiogeni che riduce la visibilità a zero in 10 secondi. Protezione certificata per la tua attività." data-translate="nebbiogeni-twitter-description">
+    <meta name="twitter:description" content="Tecnologia nebbiogeni che riduce la visibilità a zero in 10 secondi. Protezione certificata per privati e aziende in tutta Italia." data-translate="nebbiogeni-twitter-description">
     <meta name="twitter:image" content="https://www.fbtotalsecurity.com/icons/copertina-youtube-URfog.webp">
     
     <!-- Favicon -->
