--- a/serramenti.html
+++ b/serramenti.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title data-translate="serramenti-meta-title">Serramenti Sicurezza - Porte Blindate | Milano</title>
-    <meta name="description" content="Serramenti di sicurezza, porte blindate e infissi antieffrazione. Massima protezione per casa e ufficio. Installazione professionale a Milano." data-translate="serramenti-meta-description">
-    <meta name="keywords" content="serramenti sicurezza, porte blindate, infissi antieffrazione, serrature sicurezza, Milano">
+    <title data-translate="serramenti-meta-title">Serramenti Sicurezza - Porte Blindate | Italia</title>
+    <meta name="description" content="Serramenti di sicurezza, porte blindate e infissi antieffrazione. Massima protezione per casa e ufficio di privati e aziende. Installazione professionale in tutta Italia." data-translate="serramenti-meta-description">
+    <meta name="keywords" content="serramenti sicurezza, porte blindate, infissi antieffrazione, serrature sicurezza, Italia">
     <meta name="author" content="FB Total Security">
     <meta name="robots" content="index, follow">
     <meta name="language" content="IT">
     <meta name="geo.region" content="IT-25">
-    <meta name="geo.placename" content="Milano">
+    <meta name="geo.placename" content="Italia">
     
     <!-- Open Graph -->
     <meta property="og:title" content="Serramenti di Sicurezza - Porte Blindate e Infissi" data-translate="serramenti-og-title">
-    <meta property="og:description" content="Serramenti di sicurezza, porte blindate e infissi antieffrazione per massima protezione." data-translate="serramenti-og-description">
+    <meta property="og:description" content="Serramenti di sicurezza, porte blindate e infissi antieffrazione per massima protezione di privati e aziende in tutta Italia." data-translate="serramenti-og-description">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.fbtotalsecurity.com/serramenti.html">
     <meta property="og:image" content="https://www.fbtotalsecurity.com/icons/thumbnail-xecur-optimized.webp">
@@ -27,7 +27,7 @@
     <meta name="twitter:site" content="@fbtotalsecurity">
     <meta name="twitter:creator" content="@fbtotalsecurity">
     <meta name="twitter:title" content="Serramenti di Sicurezza - Porte Blindate e Infissi" data-translate="serramenti-twitter-title">
-    <meta name="twitter:description" content="Serramenti di sicurezza, porte blindate e infissi antieffrazione per massima protezione." data-translate="serramenti-twitter-description">
+    <meta name="twitter:description" content="Serramenti di sicurezza, porte blindate e infissi antieffrazione per massima protezione di privati e aziende in tutta Italia." data-translate="serramenti-twitter-description">
     <meta name="twitter:image" content="https://www.fbtotalsecurity.com/icons/thumbnail-xecur-super-optimized.webp">
     
     <!-- Favicon -->
