--- a/allarmi.html
+++ b/allarmi.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title data-translate="allarmi-meta-title">Sistemi Allarme - Antifurto e Sicurezza | Milano</title>
-    <meta name="description" content="Sistemi di allarme antifurto professionali, sensori wireless, centrali di controllo. Protezione completa per casa e ufficio. Installazione a Milano." data-translate="allarmi-meta-description">
-    <meta name="keywords" content="sistemi allarme, antifurto, sensori wireless, centrali controllo, sicurezza casa, Milano">
+    <title data-translate="allarmi-meta-title">Sistemi Allarme - Antifurto e Sicurezza | Italia</title>
+    <meta name="description" content="Sistemi di allarme antifurto professionali, sensori wireless, centrali di controllo. Protezione completa per casa e ufficio di privati e aziende. Installazione in tutta Italia." data-translate="allarmi-meta-description">
+    <meta name="keywords" content="sistemi allarme, antifurto, sensori wireless, centrali controllo, sicurezza casa, Italia">
     <meta name="author" content="FB Total Security">
     <meta name="robots" content="index, follow">
     <meta name="language" content="IT">
     <meta name="geo.region" content="IT-25">
-    <meta name="geo.placename" content="Milano">
+    <meta name="geo.placename" content="Italia">
     
     <!-- Open Graph -->
     <meta property="og:title" content="Sistemi di Allarme - Antifurto e Sicurezza Avanzata" data-translate="allarmi-og-title">
-    <meta property="og:description" content="Sistemi di allarme antifurto professionali con sensori wireless e controllo remoto." data-translate="allarmi-og-description">
+    <meta property="og:description" content="Sistemi di allarme antifurto professionali con sensori wireless e controllo remoto per privati e aziende in tutta Italia." data-translate="allarmi-og-description">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.fbtotalsecurity.com/allarmi.html">
     <meta property="og:image" content="https://www.fbtotalsecurity.com/icons/placeholder1-svg-ITLgroup.webp">
@@ -27,7 +27,7 @@
     <meta name="twitter:site" content="@fbtotalsecurity">
     <meta name="twitter:creator" content="@fbtotalsecurity">
     <meta name="twitter:title" content="Sistemi di Allarme - Antifurto e Sicurezza Avanzata" data-translate="allarmi-twitter-title">
-    <meta name="twitter:description" content="Sistemi di allarme antifurto professionali con sensori wireless e controllo remoto." data-translate="allarmi-twitter-description">
+    <meta name="twitter:description" content="Sistemi di allarme antifurto professionali con sensori wireless e controllo remoto per privati e aziende in tutta Italia." data-translate="allarmi-twitter-description">
     <meta name="twitter:image" content="https://www.fbtotalsecurity.com/icons/placeholder1-svg-ITLgroup.webp">
     
     <!-- Favicon -->
