Fix: Risolto minificatore JS e traduzioni mancanti
- Corretto minificatore per preservare spazi in rootMargin
- Aggiunte traduzioni italiane per mission-title e mission-description
- Eliminati errori IntersectionObserver e avvisi traduzioni mancanti

--- a/allarmi.html
+++ b/allarmi.html
@@ -360,7 +360,7 @@
             }
         },
         "serviceType": "Sistemi di Allarme",
-        "areaServed": "Milano e provincia e Monza e Brianza e provincia",
+        "areaServed": "Tutta Italia",
         "offers": {
             "@type": "Offer",
             "description": "Installazione sistemi antifurto e monitoraggio remoto"
@@ -819,7 +819,7 @@
                 <div class="footer-section">
                     <h3 data-translate="footer-service-area-title">Area di Servizio</h3>
                     <ul>
-                        <li data-translate="footer-service-area-location">Milano e provincia e Monza e Brianza e provincia</li>
+                        <li data-translate="footer-service-area-location">Tutta Italia</li>
                         <li data-translate="footer-service-installation">Installazione</li>
                         <li data-translate="footer-service-maintenance">Manutenzione</li>
                         <li data-translate="footer-service-support">Assistenza 24/7</li>
