--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -384,8 +384,17 @@
                                 <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/>
                             </svg>
                             <div>
+                                <h3 data-translate="contact-address-title">Indirizzo</h3>
+                                <p>Corso Sempione, Milano (MI)</p>
+                            </div>
+                        </div>
+                        <div class="contact-item">
+                            <svg class="contact-icon" viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/>
+                            </svg>
+                            <div>
                                 <h3 data-translate="chi-siamo-service-area-title">Zona di Servizio</h3>
-                                <p data-translate="chi-siamo-service-area-text">Milano e provincia e Monza e Brianza e provincia</p>
+                                <p data-translate="chi-siamo-service-area-text">Tutta Italia</p>
                             </div>
                         </div>
                     </div>
@@ -461,7 +470,7 @@
                     <ul>
 
                         <li><a href="mailto:postmaster@fbtotalsecurity.com">postmaster@fbtotalsecurity.com</a></li>
-                        <li data-translate="footer-service-area">Milano e provincia e Monza e Brianza e provincia</li>
+                        <li data-translate="footer-service-area">Tutta Italia</li>
                     </ul>
                 </div>
                 <div class="footer-section">
