--- a/index.html
+++ b/index.html
@@ -340,10 +340,17 @@ img {
             </div>
         </section>
 
+        <section class="mission-section">
+            <div class="container">
+                <h2 class="section-title" data-translate="mission-title">La tua sicurezza, la nostra missione</h2>
+                <p class="section-description" data-translate="mission-description">In un mondo in continua evoluzione, la protezione dei tuoi beni e dei tuoi cari è una priorità. FB Security nasce con l'obiettivo di offrirti una tranquillità totale, grazie a un servizio di sicurezza multisettoriale che si adatta a ogni tua esigenza. Dalla vigilanza armata ai sistemi di videosorveglianza più avanzati, dalla protezione fisica di inferriate e grate ai moderni nebbiogeni, ti offriamo una Protezione a 360°. Siamo il tuo partner di fiducia per un'esistenza sicura, giorno e notte.</p>
+            </div>
+        </section>
+
         <section id="servizi" class="services-overview">
             <div class="container">
-                <h2 class="section-title" data-translate="services-title">I Nostri Servizi Specializzati</h2>
-                <p class="section-subtitle" data-translate="services-subtitle">Quattro aree di eccellenza per la sicurezza di privati e aziende in tutta Italia</p>
+                <h2 class="section-title" data-translate="services-title">I Nostri Servizi di Sicurezza</h2>
+                <p class="section-subtitle" data-translate="services-subtitle">Soluzioni complete per ogni esigenza di protezione</p>
                 <div class="services-grid">
                     <a href="nebbiogeni.html" class="service-card nebbiogeni-card">
                         <div class="service-icon">
@@ -414,7 +421,11 @@ img {
                     </div>
                     <!-- Duplicati per loop seamless -->
                     <div class="partner-logo">
-                        <img src="icons/CIVIS-logo-carosello-homepage.svg" alt="CIVIS Logo" loading="lazy" width="80" height="26" />
+                        <svg width="80" height="26" viewBox="0 0 80 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <rect width="80" height="26" rx="4" fill="#f3f4f6"/>
+                            <rect x="8" y="8" width="64" height="10" rx="2" fill="#d1d5db"/>
+                            <text x="40" y="17" text-anchor="middle" font-family="Arial, sans-serif" font-size="8" fill="#6b7280">PARTNER</text>
+                        </svg>
                     </div>
                     <div class="partner-logo">
                         <img src="icons/itlgroup-logo-carosello-homepage_small.webp" alt="ITL Group Logo" loading="lazy" width="67" height="26" />
@@ -795,6 +806,15 @@ img {
                                 <div>
                                     <h3 data-translate="contact-email-label">Email</h3>
                                     <p><a href="mailto:postmaster@fbtotalsecurity.com">postmaster@fbtotalsecurity.com</a></p>
+                                </div>
+                            </div>
+                            <div class="contact-item">
+                                <svg class="contact-icon" viewBox="0 0 24 24" fill="currentColor">
+                                    <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/>
+                                </svg>
+                                <div>
+                                    <h3 data-translate="contact-address-title">Indirizzo</h3>
+                                    <p>Corso Sempione, Milano (MI)</p>
                                 </div>
                             </div>
                             <div class="contact-item">
