--- a/serramenti.html
+++ b/serramenti.html
@@ -370,7 +370,7 @@
             }
         },
         "serviceType": "Serramenti di Sicurezza",
-        "areaServed": "Milano e provincia e Monza e Brianza e provincia",
+        "areaServed": "Tutta Italia",
         "offers": {
             "@type": "Offer",
             "description": "Installazione porte blindate e serramenti antieffrazione"
@@ -887,7 +887,7 @@
                 <div class="footer-section">
                     <h3 data-translate="footer-service-area-title">Area di Servizio</h3>
                     <ul>
-                        <li data-translate="footer-service-area">Milano e provincia e Monza e Brianza e provincia</li>
+                        <li data-translate="footer-service-area">Tutta Italia</li>
                         <li data-translate="footer-installation">Installazione</li>
                         <li data-translate="footer-maintenance">Manutenzione</li>
                         <li data-translate="footer-support">Assistenza 24/7</li>
