--- a/sorveglianza.html
+++ b/sorveglianza.html
@@ -150,7 +150,7 @@
         },
         "areaServed": {
             "@type": "Place",
-            "name": "Milano e Provincia"
+            "name": "Tutta Italia"
         },
         "serviceType": "Videosorveglianza",
         "category": "Sicurezza",
@@ -842,7 +842,7 @@
                 <div class="footer-section">
                     <h3 data-translate="footer-service-area-title">Area di Servizio</h3>
                     <ul>
-                        <li data-translate="footer-service-area-location">Milano e provincia e Monza e Brianza e provincia</li>
+                        <li data-translate="footer-service-area-location">Tutta Italia</li>
                         <li data-translate="footer-service-installation">Installazione</li>
                         <li data-translate="footer-service-maintenance">Manutenzione</li>
                         <li data-translate="footer-service-support">Assistenza 24/7</li>
