--- a/nebbiogeni.html
+++ b/nebbiogeni.html
@@ -140,7 +140,7 @@
             }
         },
         "serviceType": "Sistemi di Sicurezza",
-        "areaServed": "Milano e provincia e Monza e Brianza e provincia",
+        "areaServed": "Tutta Italia",
         "offers": {
             "@type": "Offer",
             "description": "Installazione e manutenzione sistemi nebbiogeni"
@@ -635,7 +635,7 @@
                 <div class="footer-section">
                     <h3 data-translate="footer-service-area-title">Area di Servizio</h3>
                     <ul>
-                        <li data-translate="footer-service-area">Milano e provincia e Monza e Brianza e provincia</li>
+                        <li data-translate="footer-service-area">Tutta Italia</li>
                         <li data-translate="footer-installation">Installazione</li>
                         <li data-translate="footer-maintenance">Manutenzione</li>
                         <li data-translate="footer-support">Assistenza 24/7</li>
