--- a/termini-condizioni.html
+++ b/termini-condizioni.html
@@ -184,7 +184,7 @@
                 </div>
                 <div class="footer-section">
                     <h3 data-translate="footer-contacts-title">Contatti</h3>
-                    <p data-translate="footer-location">📍 Milano e Provincia</p>
+                    <p data-translate="footer-location">📍 Tutta Italia</p>
                     <p><a href="mailto:postmaster@fbtotalsecurity.com" data-translate="footer-email">✉️ postmaster@fbtotalsecurity.com</a></p>
                 </div>
             </div>
