Fix: Risolti errori 503 rimuovendo tag prefetch incompatibili con server di sviluppo

--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -83,11 +83,7 @@
     <link rel="preconnect" href="https://www.fbtotalsecurity.com" crossorigin>
     <!-- Rimosso prefetch Cloudflare email-decode per evitare problemi SEO con link non scansionabili -->
 
-    <link rel="prefetch" href="index.html">
-    <link rel="prefetch" href="nebbiogeni.html">
-    <link rel="prefetch" href="serramenti.html">
-    <link rel="prefetch" href="sorveglianza.html">
-    <link rel="prefetch" href="allarmi.html">
+    <!-- Prefetch rimosso per evitare errori 503 con server di sviluppo -->
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=optional" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=optional" rel="stylesheet"></noscript>
     
