--- a/sorveglianza.html
+++ b/sorveglianza.html
@@ -91,10 +91,7 @@
     <link rel="preconnect" href="https://www.fbtotalsecurity.com" crossorigin>
     <!-- Rimosso prefetch Cloudflare email-decode per evitare problemi SEO con link non scansionabili -->
 
-    <link rel="prefetch" href="index.html">
-    <link rel="prefetch" href="nebbiogeni.html">
-    <link rel="prefetch" href="serramenti.html">
-    <link rel="prefetch" href="allarmi.html">
+    <!-- Prefetch rimosso per evitare errori 503 con server di sviluppo -->
     
     <!-- Preload Critical Images for LCP -->
     <link rel="preload" href="icons/logo_sito_franco_small.webp" as="image" fetchpriority="high">
